# marsam

./: CMakeLists.txt  README.md
code/examples/: CMakeLists.txt
code/examples/source-files/: example-window.cpp
code/qalam/: CMakeLists.txt  README.md
code/qalam/header-files/: context.hpp
code/qalam/source-files/: context.cpp
code/sahifa/: CMakeLists.txt  README.md  window-notes.md
code/sahifa/header-files/: window.hpp
code/sahifa/header-files/core/win32/: window-win32.hpp
code/sahifa/header-files/utils/: window-utils.hpp
code/sahifa/source-files/: window.cpp
code/sahifa/source-files/core/win32/: win32-window.cpp  window-win32.cpp
